# auto-product-counting

./: .env.example  IMPLEMENTATION_PLAN.md  PHASE_0_COMPLETION.md  PHASE_0_SETUP.md  README.md  START_HERE.md  project_spec.md  verify_phase0.sh
.claude/: CLAUDE.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: __init__.py  auth.py  cameras.py  counts.py  logs.py  metrics.py  reports.py  sessions.py  streams.py  uploads.py
backend/app/auth/: auth.py
backend/app/core/: activity.py  counter.py  detector.py  frame_reader.py  tracker.py  worker.py  worker_manager.py  zones.py
backend/app/db/: models.py  mongo.py
backend/app/realtime/: socketio_server.py
backend/app/services/: event_bus.py  metrics_service.py  report_service.py  session_service.py
backend/tests/: benchmark_ingestion.py  test_activity_fsm.py  test_auth.py  test_counting.py  test_detect_track.py  test_hardening.py  test_ingestion.py  test_persistence.py  test_realtime_api.py  test_reports.py
frontend/: angular.json  package-lock.json  package.json  proxy.conf.json  tailwind.config.js
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.spec.ts  app.routes.ts
frontend/src/app/guards/: auth.guard.spec.ts
frontend/src/app/interceptors/: auth.interceptor.spec.ts
frontend/src/app/models/: api.models.ts
frontend/src/app/services/: api.service.spec.ts  api.service.ts  auth.service.spec.ts  (+3 more)
frontend/src/environments/: environment.prod.ts  environment.ts
mediamtx/: mediamtx.yml  publish_samples.sh  run_mediamtx.sh
samples/: .gitignore
(+14 files in other folders)
