[project]
name = "backend"
version = "0.1.0"
description = "YOLOv11 + ByteTrack Loading/Unloading Monitoring System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "ultralytics>=8.0.0",
    "supervision>=0.17.0",
    "opencv-python>=4.8.0",
    "motor>=3.3.0",
    "python-socketio>=5.9.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "python-multipart>=0.0.6",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
